--- a/style.css
+++ b/style.css
@@ -1,22 +1,123 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+body {
+  font-family: 'Montserrat', sans-serif;
+}
 
 .container {
-  background-color: pink;
+  background-color: black;
   width: 50%;
-  margin: auto;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: rem;
+  border-radius: 2rem;
   
   
 }
 
-.container-fluid {
-  margin-left: auto;
-  margin-right: auto;
+.container:hover{
+  border-style: solid;
+  border-color: yellow;
 }
+
+
 h1{
   text-align: center;
+  background-color: yellow;
+  width: 50vw;
+  height: 10vh;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 2rem;
+}
+
+h1:hover{
+  background-color: black;
+  color: yellow;
+  border-style: solid;
+  border-color: yellow;
 }
 
 input,
 label {
   display: block;
+  margin: auto;
+  margin-top: rem;
+  margin-bottom: 2rem;
+  height: 5vh;
+}
+
+.top-1 {
+  margin-top: rem;
+  padding-top: 2rem;
+}
+
+.top-1:hover{
+  color: yellow;
+  
+}
+
+
+.top-2:hover{
+  color: yellow;
+  
+}
+
+#lucky-number{
+  border-radius: 0.5rem;
+}
+
+#date-of-birth{
+  border-radius: 0.5rem;
+}
+
+#check-number{
+  width: 10vw;
+  height: 5vh;
+  margin-bottom: 2rem;
+  background-color: yellow;
+  border-style: solid;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  border-radius: 0.5rem;
+  
+}
+
+#check-number:hover {
+  border-color: yellow;
+  background-color: black;
+  color: yellow;
+  font-weight: bold;
+}
+
+#output-box {
+  height: 7vh;
+  border-style: solid;
+  border-color: yellow;
+  padding-top: 1.5rem;
+  border-radius: 2rem;
+  color: yellow;
+  
+  
+}
+
+@media only screen and (max-width: 700px) {
+  h1{
+    width: 95vw;
+    font-size: 1.5rem;
+    padding-top: 1.2rem;
+   
+  }
+
+  .container{
+    width: 95vw;
+  }
+
+  #check-number {
+    width: 30vw;
+    height: 6vh;
+    border-radius: 0.5rem;
+  }
 }
