--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ h1{
   margin-left: auto;
   margin-right: auto;
   border-radius: 2rem;
+  
+}
+
+.main{
+  border-color: black;
+  border-style: solid;
 }
 
 h1:hover{
